styles.css
*, ::before, ::after {
  box-sizing: border-box;
}
body {
  height: 100vh; margin: 0; padding: 0;
  font-family: sans-serif;
}
#app {
  height: 100vh; display: flex; flex-direction: column; overflow: hidden;
}
@media print {
  /*
   * The styles in this section are in play when printing from the widget's "Print" menu option,
   * but it's really hard to print well via that, because we have an iframe inside an iframe. This
   * doesn't work for multi-page content. There are difficult solutions, like copying iframe
   * content to main frame, adjusting styles, etc, which run into other problems (e.g. preserving
   * linked stylesheets). Instead, we will expose a "Print" button to print the inner iframe
   * directly.
   */
  .topbar, .drawer {
    display: none !important;
  }
}
.toolbar {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  min-height: 3rem;
  padding: 0.5rem 0.75rem;
  background-color: rgb(243 244 246);
  border-bottom: 1px solid rgb(209 213 219);
  font-size: small;
}
.toolbar-group {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}
.toolbar-group:last-child {
  margin-left: auto;
}
.main-area {
  flex: auto;
  overflow-y: auto;
}
iframe {
  width: 100%;
  height: 100%;
  border: none;
}
button, .button {
  padding: 0.25rem 0.75rem;
  font-size: small;
  border: 1px solid rgb(209 213 219);
  border-radius: 0.375rem;
  color: #111827;
  background-color: #ffffff;
  cursor: pointer;
  white-space: nowrap;
}
.button:not(.button-active):hover {
  color: #1f2937;
  border-color: #aaa;
}
.button-group {
  display: flex;
  border: 1px solid #d1d5db;
  border-radius: 0.375rem;
  overflow: hidden;
}
.button-active {
  color: #111827;
  background-color: #ffffff;
  border: 1px solid #d1d5db;
  font-weight: 500;
  border-radius: 0.375rem;
  margin: -1px;
  z-index: 10;
}
.button-inactive {
  color: #4b5563;
  background-color: #f3f4f6;
  border: none;
}
.button-inactive:hover {
  color: #1f2937;
  background-color: #f0f1f2;
}

.drawer {
  position: fixed;
  top: 0;
  right: 0;
  display: flex;
  align-items: center;
  height: 3rem;
  padding: 0.5rem 0 0.5rem 0;
  gap: 0.5rem;
  z-index: 1;
}
.drawer-expand {
  display: flex;
  align-items: top;
  height: 3rem;
  padding: 0.5rem 2rem;
  align-items: center;
  justify-content: end;
  gap: 0.5rem;
  z-index: 2;
  transform: translateX(100%);
  transition: all 0.2s ease-out;
  background-color: rgba(100, 100, 100, 0.15);
  box-shadow: 0px 0px 0.5rem 0 rgba(100, 100, 100, 0.5);
  opacity: 0;
}
.drawer-expand:hover, .drawer:hover .drawer-expand:hover, .drawer:hover .expand-button:hover + .drawer-expand {
  transform: translateX(0);
  opacity: 1;
}
.drawer-expand button {
  box-shadow: 0px 0px 0.5rem 0 rgba(100, 100, 100, 0.5);
}
.expand-button::before {
  content: "❮";
}
.expand-button {
  position: fixed;
  right: 0;
  line-height: 1rem;
  color: #888;
  border-right: none;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  padding: 0.25rem;
  opacity: 0.7;
  transition: all 0.1s ease-out;
  z-index: 100;
}
.expand-button:hover {
  border-color: #aaa;
}
.drawer:hover .expand-button {
  transform-origin: right;
  padding: 0.25rem 0.5rem;
  opacity: 1;
}

.status-bar {
  height: 2rem;
  background-color: #fef9c3;
  padding: 0.25rem 0.75rem;
  border-bottom: 1px solid #0000001a;
  font-size: 0.875rem;
  line-height: 1.5rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.errors-container {
  padding: 0.75rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.error-card {
  margin-top: 0.5rem;
  padding: 0.75rem;
  border-left: 4px solid #ef4444;
  background-color: #fef2f2;
  border-radius: 0.25rem;
  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
}
.error-title { font-weight: 700; color: #b91c1c; }
.error-meta { font-size: 0.75rem; color: #b91c1c; }
.error-button {
  margin-top: 0.5rem;
  padding: 0.25rem 0.5rem;
  background-color: #dc2626;
  color: #fff;
  border-radius: 0.25rem;
  font-size: 0.75rem;
  border: none;
}
.info-text {
  font-size: 14px;
  line-height: 1.5;
  padding: 1rem;
  padding-top: 2rem;
  position: relative;
}
.info-text code, .info-text pre {
  background-color: #EEE;
  border-radius: 3px;
  padding: 2px 4px;
  overflow-x: auto;
  font-size: 13px;
}
.info-record {
  resize: vertical;
  overflow: auto;
  height: 130px;
}
.modal-bg {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 100;
  display: flex;
}
.modal {
  position: relative;
  flex: auto;
  margin: 2.5rem 0.5rem 0.5rem 0.5rem;
  background-color: #fff;
  border-radius: 0.5rem;
  overflow: auto;
}
.floating-buttons {
  position: absolute;
  top: 3rem;
  right: 1.5rem;
  z-index: 1;
  display: flex;
  gap: 0.5rem;
}

